Update settings localization v22

--- a/assets/locales/en-US.json
+++ b/assets/locales/en-US.json
@@ -212,6 +212,9 @@
             "day": "Day",
             "month": "Month",
             "year": "Year"
+        },
+        "country": {
+            "select_country": "Select country"
         }
     },
     "countries": {
