--- a/assets/locales/ru-RU.json
+++ b/assets/locales/ru-RU.json
@@ -212,6 +212,9 @@
             "day": "День",
             "month": "Месяц",
             "year": "Год"
+        },
+        "country": {
+            "select_country": "Select country"
         }
     },
     "countries": {
