Update settings localization v22

--- a/assets/locales/ru-RU.json
+++ b/assets/locales/ru-RU.json
@@ -214,7 +214,7 @@
             "year": "Год"
         },
         "country": {
-            "select_country": "Select country"
+            "select_country": "Выберите страну"
         }
     },
     "countries": {
