--- a/assets/locales/en-US.json
+++ b/assets/locales/en-US.json
@@ -170,6 +170,17 @@
             "tarif-plan-text": "Tariff plan:"
         }
     },
+    "premium": {
+        "activeUntil": "Active until {date}",
+        "plans": {
+            "1m": "1 month (Basic)",
+            "3m": "3 months (Standard)",
+            "6m": "6 months (Pro)",
+            "12m": "12 months (Ultimate)"
+        },
+        "subscriptionStatus": "Subscription status:",
+        "tariffPlan": "Tariff plan:"
+    },
     "modal-deposit": {
         "switch_title_deposit": "Deposit",
         "switch_title_promo": "Promo",
