Add referal system

--- a/assets/locales/ru-RU.json
+++ b/assets/locales/ru-RU.json
@@ -181,6 +181,17 @@
         "subscriptionStatus": "Статус подписки:",
         "tariffPlan": "Тарифный план:"
     },
+    "referals": {
+        "referral.title": "Реферальная панель управления",
+        "program_heading": "Реферальная программа",
+        "program_description": "Вы будете получать 1 за приглашенного пользователя. Для пользователей с премиум — ставка увеличивается вдвое до 3.0 за приглашенного пользователя. Денежные средства поступают моментально на баланс.",
+        "your_code_label": "Ваш реферальный код",
+        "copy_button": "Скопировать",
+        "activate_heading": "Активация реферального кода",
+        "activate_description": "Активируйте реферальный код пользователя, пригласившего вас, и получите 3 на баланс. Пригласивший вас пользователь получит 1 без премиум подписки и 3 с премиум подпиской.",
+        "enter_invite_code_placeholder": "Введите код приглашения",
+        "activate_button": "Активировать"
+    },
     "modal-deposit": {
         "switch_title_deposit": "Пополнить",
         "switch_title_promo": "Промокод",
