--- a/assets/locales/en-US.json
+++ b/assets/locales/en-US.json
@@ -181,6 +181,17 @@
         "subscriptionStatus": "Subscription status:",
         "tariffPlan": "Tariff plan:"
     },
+    "referals": {
+        "referral.title": "Referal panel",
+        "program_heading": "Referal program",
+        "program_description": "You will receive 1.5 per invited user. The rate increases for premium users. double to 3.0 per invited user. Funds are credited to the balance immediately.",
+        "your_code_label": "Your referal code",
+        "copy_button": "Сopy",
+        "activate_heading": "Activation referal code",
+        "activate_description": "Activate the referral code of the user who invited you and get 3 to the balance. The user who invited you will receive 1 without a premium subscription and 3 with a premium subscription.",
+        "enter_invite_code_placeholder": "Enter the invitation code",
+        "activate_button": "Activate"
+    },
     "modal-deposit": {
         "switch_title_deposit": "Deposit",
         "switch_title_promo": "Promo",
