--- a/assets/locales/ru-RU.json
+++ b/assets/locales/ru-RU.json
@@ -190,7 +190,10 @@
         "activate_heading": "Активация реферального кода",
         "activate_description": "Активируйте реферальный код пользователя, пригласившего вас, и получите 3 на баланс. Пригласивший вас пользователь получит 1 без премиум подписки и 3 с премиум подпиской.",
         "enter_invite_code_placeholder": "Введите код приглашения",
-        "activate_button": "Активировать"
+        "activate_button": "Активировать",
+        "total_earned": "Всего заработано",
+        "your_rate_per_user": "Ваша ставка за пользователя",
+        "invited_users": "Приглашенных пользователей"
     },
     "modal-deposit": {
         "switch_title_deposit": "Пополнить",
