--- a/assets/locales/ru-RU.json
+++ b/assets/locales/ru-RU.json
@@ -27,7 +27,8 @@
     "footer": {
         "copyright": "© 2025 Проект компании ValeyevStudio.",
         "user-agreement": "Пользовательское соглашение",
-        "partners": "Партнёрам"
+        "partners": "Партнёрам",
+        "referals": "Реферальная программа"
     },
     "footer-social": {
         "social-platforms": "Социальные сети:"
