--- a/assets/locales/ru-RU.json
+++ b/assets/locales/ru-RU.json
@@ -40,20 +40,30 @@
     },
     "faq": {
         "faq-title": "Часто задаваемые вопросы",
-        "questions": {
-            "q1": {
-                "question": "Почему именно мы?",
-                "answer": "Мы — команда разработчиков, которые заинтересованы в том, чтобы предоставить продукт максимально большому количеству людей на планете, чтобы каждый мог попробовать наш продукт. Это всё абсолютно бесплатно!"
-            },
-            "q2": {
-                "question": "Как начать использовать программу?",
-                "answer": "Чтобы скачать наше фирменное ПО, перейдите в соответствующий раздел сайта и нажмите кнопку Download.<br><br>Помните, что скачивая наше ПО, вы соглашаетесь с пользовательским соглашением и политикой нашей компании — Valeyev Studio."
-            },
-            "q3": {
-                "question": "Стоимость платной подписки?",
-                "answer": "Цена платной подписки составляет 0,99 долларов США. Подписка, после активации, даётся на 1 календарный месяц с момента активации.<br><br>Подписка даёт возможность через настройки убрать навязчивый баннер и получить другие функции."
-            }
-        }
+        "faq-subtitle": "Все ответы на ваши вопросы",
+        "faq-button-main": "Основное",
+        "faq-button-subscribe": "Подписка",
+        "faq-button-account": "Аккаунт",
+        "faq-button-security": "Безопасность",
+        "faq-button-other": "Другое",
+        "faq-main-question-1": "Почему именно мы?",
+        "faq-main-answer-1": "Мы — команда разработчиков, которые заинтересованы в том, чтобы предоставить продукт максимально большому количеству людей на планете, чтобы каждый мог попробовать наш продукт. Это всё абсолютно бесплатно!",
+        "faq-main-question-2": "Как начать использовать программу?",
+        "faq-main-answer-2": "Чтобы скачать наше фирменное ПО, перейдите в соответствующий раздел сайта и нажмите кнопку Download.\n\nПомните, что скачивая наше ПО, вы соглашаетесь с пользовательским соглашением и политикой нашей компании — ValeyevStudio.",
+        "faq-main-question-3": "Стоимость платной подписки?",
+        "faq-main-answer-3": "Ценовая стоимость платной подписки составляет 1 доллар США. Подписка, после активации, даётся на 1 календарный месяц с момента активации.\n\nПодписка даёт возможность через настройки убрать навязчивый баннер и получить доступ к экспериментальным функциям.",
+        "faq-sub-question-1": "Какие есть планы подписки?",
+        "faq-sub-answer-1": "Пока доступен только один план подписки стоимостью 1 доллар в месяц.",
+        "faq-account-question-1": "Как изменить данные аккаунта?",
+        "faq-account-answer-1": "Изменить данные можно через раздел \"Настройки аккаунта\" в личном кабинете.",
+        "faq-security-question-1": "Мои данные в безопасности?",
+        "faq-security-answer-1": "Абсолютная безопасность ваших данных\n\nМы заботимся о защите каждого пользователя:\n- Пароли шифруются с использованием алгоритма **bcrypt**.\n- Все данные передаются по зашифрованному соединению (**HTTPS**).\n- Мы применяем только проверенные методы и инструменты безопасности.\n- Многоуровневая архитектура безопасности защищает от любых угроз.\n\nВаши данные — под надёжной защитой.",
+        "faq-security-question-2": "Насколько безопасна смена пароля?",
+        "faq-security-answer-2": "Смена пароля осуществляется через **уникальный шифрованный токен**, который действует **строго ограниченное время** и автоматически истекает после выполнения операции.\n\nЭто гарантирует безопасность процедуры смены пароля с использованием современных криптографических методов.",
+        "faq-security-question-3": "Как подключить дополнительную защиту аккаунта?",
+        "faq-security-answer-3": "В пользовательском меню откройте раздел **«Настройки»**, затем подраздел **«Безопасность»**, где можно включить **двухфакторную аутентификацию (2FA)** через **Google Authenticator**.\n\nДаже если ваш пароль станет известен злоумышленнику, без 2FA-кода он не получит доступ.\n\n**2FA — один из самых эффективных способов защитить данные.**",
+        "faq-other-question-1": "Где находится ваша компания?",
+        "faq-other-answer-1": "Мы — распределённая команда, работающая по всему миру. У нас нет единого физического офиса."
     },
     "tooltip": {
         "music-volume": "Громкость музыки",
@@ -205,7 +215,7 @@
         "in-progress": "Раздел находится в разработке."
     },
     "roadmap": {
-        "roadmap-heading": "Дорожная карта 2025–2026",
+        "roadmap-heading": "Дорожная карта 2026–2027",
         "roadmap-title": "Наши планы",
         "stage-1": "Оптимизация сайта и программного обеспечения",
         "stage-discription1": "Продолжим улучшать стабильность, скорость загрузки и удобство использования как веб-сайта, так и основного ПО.",
